--- a/theme.toml
+++ b/theme.toml
@@ -3,7 +3,7 @@ description = "A modern simple Zola's theme related to docs as code methodology"
 license = "MIT"
 homepage = "https://github.com/codeandmedia/zola_docsascode_theme"
 min_version = "0.10.0"
-demo = "docsascode.codeandmedia.com"
+demo = "https://docsascode.codeandmedia.com"
 
 [author]
 name = "Roman Soldatenkov"
