--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,13 @@
 base_url = "/"
 compile_sass = true
 title = "Docs title"
-highlight_code = true
-highlight_theme = "kronuz"
 build_search_index = true
 
 taxonomies = [
     {name = "tags", rss = true},
     {name = "authors", rss = true},
 ]
+
+[markdown]
+highlight_code = true
+highlight_theme = "kronuz"
